# ToDo-CLI

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/app/: Application.cpp  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h
src/app/cli/: CommandHandler.cpp  CommandHandler.h
src/app/utils/: FileHandler.cpp  FileHandler.h  Parser.cpp  Parser.h  TerminalColors.h  Uuid.cpp  Uuid.h
tests/: test_task.cpp  test_task_manager.cpp
